# pycaretaker

./: .gitignore  README.md  package_manager.py  pyproject.toml  requirements.txt
plugins/: README.md
pycaretaker/: __init__.py  cli.py
pycaretaker/ai/: __init__.py  analysis.py  backend.py  nlp_commands.py  recommendations.py  security.py
pycaretaker/core/: __init__.py  deps.py  diff.py  export.py  monitor.py  outdated.py  packages.py  profiler.py
pycaretaker/plugins/: __init__.py
pycaretaker/plugins/examples/: license_check.py
tests/: test_core.py
